# Tritium_Simulations

./: README.md  Setup_Geant4_CMake_Root_Cosmics.sh
1_fibra/Scintillator/: CMakeLists.txt  Scintillator.cc  Scintillator.sh  TritiumSource.mac
1_fibra/Scintillator/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  Materials.hh  PhysicsList.hh  PrimaryGeneratorGPS.hh  RunAction.hh  sipmHit.hh  sipmSD.hh
1_fibra/Scintillator/src/: ActionInitialization.cc  DetectorConstruction.cc  (+6 more)
Cosmics/20cm1mmFibers_with_Lead_without_VETO/: links.txt
Cosmics/20cm1mmFibers_without_Lead_without_VETO/MultipleFibbersOpticalTimeBUNCH-Cosmics/: CMakeLists.txt
Cosmics/20cm1mmFibers_without_Lead_without_VETO/MultipleFibbersOpticalTimeBUNCH-Cosmics/Photos/: cosmicexample2png
Cosmics/20cm1mmFibers_without_Lead_without_VETO/MultipleFibbersOpticalTimeBUNCH-Cosmics/include/: DetectorConstruction.hh  EventAction.hh  Materials.hh  PrimaryGeneratorAction.hh  RunAction.hh  fibberHit.hh
Cosmics/20cm1mmFibers_without_Lead_without_VETO/MultipleFibbersOpticalTimeBUNCH-Cosmics/src/: DetectorConstruction.cc  Materials.cc  PhysicsList.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  fibberHit.cc
Fiber_bunch/: JoinGraphs.C
Fiber_bunch/MultipleFibbersOpticalTimeBUNCH/: CMakeLists.txt  MultiFibbers.cc
MultiFibberOpticalTimeBUNCH/MultipleFibbersOpticalTimeBUNCH/: Analise.C  MultiFibbers.cc
MultiFibberOpticalTimeBUNCH_1mm_800/: MultipleFibbersOpticalTimeBUNCH.tar.xz
MultiFibberOpticalTimeBUNCH_1mm_800/MultipleFibbersOpticalTimeBUNCH/: CMakeLists.txt  Cluster_IFIC.py  Cluster_IFIC.sh  MultiFibbers.cc  RunSimulationTritium.py  init_vis.mac  test.sub  test_1_run.sh
MultiFibberOpticalTimeBUNCH_1mm_800/Results_84_days/: AllDataSingle100BqL.root  AllDataSingle150BqL.root  AllDataSingle200BqL.root  AllDataSingle250BqL.root  MakeGraphs.sh
MultiFibberOpticalTimeBUNCH_1mm_800_PMTs/: MakeSingleGraphs.C
MultiFibberOpticalTimeBUNCH_1mm_800_PMTs/MultipleFibbersOpticalTimeBUNCH/: G4History.macro  README  RunCicle.py
MultipleFibberPhotoelectric/: Makefile  MultiFibbers.cc  MultipleFibbers  TRITIUMSpectrum.txt  TritiumSource.mac  currentEvent.rndm  currentRun.rndm  init.mac
MultipleFibberPhotoelectric/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorGPS.hh  SteppingAction.hh  fibberHit.hh
MultipleFibberPhotoelectric/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorGPS.cc  RunAction.cc  SteppingAction.cc  fibberSD.cc
MultipleFibbersOpticalTime/: CMakeLists.txt  MultiFibbers.cc  Scintillator.sh  WaterPropertiesConvertion.ods  init.mac  run1.mac
MultipleFibbersOpticalTime/include/: ActionInitialization.hh  DetectorConstruction.hh  Materials.hh  PrimaryGeneratorGPS.hh  RunAction.hh
MultipleFibbersOpticalTime/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Materials.cc  PhysicsList.cc  PrimaryGeneratorGPS.cc  RunAction.cc  fibberSD.cc
Scrips_for_computing_farm_IFIC/: Cluster_IFIC.sh  Cluster_IFIC12.sh  Cluster_IFIC2.sh  fail_files_1.sh  fail_files_2.sh  small.sh  test.sub
Scripts_DataAnalysis/: GenerateData.sh  generate5detectors.C
(+6235 files in other folders)
